# news

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  README.md  SYSTEM_REQUIREMENTS.md  YANDEX_API_SETUP.md  backup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  generate_telegram_session.py  generate_telegram_session_pyrogram.py  generate_telegram_session_qr.py  import_shipbuilding_sources.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260318_0001_add_vk_and_max.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  canonical_items.py  dashboard.py  moderation.py  operations.py  public.py  publishing.py  raw_items.py  settings.py  sources.py
backend/app/core/: bootstrap.py  config.py  database.py  dependencies.py  logging.py  security.py  topics.py
backend/app/models/: __init__.py  audit_log.py  canonical_item.py  duplicate_group.py  filter_rule.py  publish_record.py  raw_item.py  setting.py  source.py  user.py
backend/app/schemas/: auth.py  canonical_item.py  common.py  raw_item.py  source.py
backend/app/services/: media.py
backend/app/workers/: celery_app.py
backend/app/workers/collectors/: tasks.py
backend/app/workers/pipeline/: ai_rewrite.py  deduplication.py  normalization.py  tasks.py
backend/app/workers/publishers/: tasks.py
backend/tests/: conftest.py  test_api.py  test_normalization.py  test_security.py
deploy/: Caddyfile
docs/: SPEC.md  (+3 more)
(+29 files in other folders)
